# quicktemp

./: .gitignore  Cargo.toml  README.md  clippy.toml  nodemon.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.github/: dependabot.yml
client/: .editorconfig  .gitignore  .travis.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: main.ts
client/src/assets/: global.css
client/src/scripts/: dom.ts  index.ts  utils.ts
pkg/: LICENSE.txt  README.md  package.json  quicktemp.d.ts  quicktemp.js  quicktemp_bg.js  quicktemp_bg.wasm  quicktemp_bg.wasm.d.ts
server/: Cargo.toml
server/src/: main.rs  routes.rs  utils.rs
src/: convert.rs  db.ts  error.rs  index.ts  lib.rs  temp.rs  types.ts  unit.rs
tests/: web.rs
