[package]
  name = "quicktemp"
  version = "0.2.0"
  authors = ["Prince Muel <vansomecsam@gmail.com>"]
  edition = "2021"
  description = "A temparature converter built with Vite, Wasm and Rust"
  repository = "https://github.com/princemuel/quicktemp"
  license = "MIT"
  publish = false

[lib]
  crate-type = ["cdylib", "rlib"]

[dependencies]
  serde = { version = "1", features = ["derive"] }
  serde-wasm-bindgen = "0.6"
  wasm-bindgen = "0.2"

[dev-dependencies]
  wasm-bindgen-test = "0.3"

[profile.release]
  opt-level = "s"   # or "s" if you want better perf, slightly larger
  lto = true        # enable link-time optimization
  codegen-units = 1 # better optimization, slower build
  panic = "abort"   # strip unwinding code
  strip = true      # remove symbols
  debug = false     # no debug info

  [package.metadata.wasm-pack.profile.release]
    wasm-opt = ['-O', "--enable-bulk-memory"]
