[package]
  name = "quicktemp"
  version = "0.3.0"
  authors = ["Prince Muel <vansomecsam@gmail.com>"]
  edition = "2024"
  description = "A temparature converter built with Vite, Wasm and Rust"
  repository = "https://github.com/princemuel/quicktemp"
  license = "MIT"
  publish = false

[lib]
  crate-type = ["cdylib"]

[dependencies]
  wasm-bindgen = { version = "0.2", default-features = false, features = [
    "std",
  ] }

[profile.release]
  opt-level = "z"   # or "s" if you want better perf, slightly larger
  lto = "fat"       # enable link-time optimization
  codegen-units = 1 # better optimization, slower build
  panic = "abort"   # strip unwinding code
  strip = true      # remove symbols
  debug = false     # no debug info

  [package.metadata.wasm-pack.profile.release]
    wasm-opt = ['-O', "--enable-bulk-memory"]
